# pro-nlp-finalproject-nlp-15

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  UPLOAD_GUIDE.md  apply_indexes.py  check_handler.py  check_langfuse.py  fact_book_final.json  find_db.py  fix_db_indexes.py  inspect_db.py  inspect_lf.py  main.py  main_test.py  original_analyst.yaml  packages.txt  pyproject.toml  requirements.txt  test_db.py  test_handler_params.py  verify_performance.py
.agent/rules/: chatbot-context.md  system-prompt.md
.agent/workflows/: upsert_resources.md
agents/: __init__.py  analyst.py  arena.py  bear.py  bull.py  verdict.py
app/: chatbot_app.py
chatbot/: agent.py  llm_client.py  utils.py
chatbot/bot/: agent.py  llm_client.py  prompt.py
chatbot/multi_agent/: __init__.py  analyst.py  arena.py  bear.py  bull.py  verdict.py
chatbot/tools/: extract_url_content.py  get_original_article.py  get_period_overview.py  get_price_summary.py  get_summary.py  search_events.py  search_events_by_keyword.py  search_knowledge_base.py  search_relative_articles.py  search_relative_events.py  search_volatility_events.py  vector_search.py  web_browser.py  web_search.py
config/: chatbot.yaml  config.example.yaml  config.yaml  db.yaml  extract.yaml  index_events.yaml  ingest_raw.yaml  kb_chunking.yaml  kb_indexing.yaml  rag.yaml
config/app/: assets.yaml  limits.yaml  multi_agent_prompts.yaml  prompts.yaml  system.yaml
config/db/: rdb.example.yaml
config/infra/: data.yaml  database.yaml  rag.yaml
config/llm/: gemini.yaml  local.example.yaml  local.yaml  openai.yaml
config/prompts/: analyst_agent.yaml  arena.yaml  bear_agent.yaml  bull_agent.yaml  schema_ie.yaml  verdict.yaml
core/: db.py  fact_book_utils.py  initial_bias.py  jsonl__loader.py  llm.py  reasoning.py  schema.py
db/: article_repo.py  database.py  event_repo.py  news_repo.py  price_repo.py  resource_manager.py  stock_api.py  vector_store.py
db/scripts/: ingest_articles.py  ingest_events.py
docs/: ARCHITECTURE.md  CONFIG_GUIDE.md
eda/: by_keyword_eda.ipynb  news_articles_eda.ipynb
experiments/: prompt_tester.py  test_scenarios.yaml  test_timeline_opt.py
extract/: extractor_engine.py  llm_client.py  schema.py
interpret/: README.md  __init__.py  csv_loader.py  db.py  llm.py  main.py  migrate.py  pipeline.py  predict.py  summarize.py
metric/: README.md  event_evaluation.py  metrics_design.md  utils.py
preprocess/: chunk_financial_documents.py  db_verifier.py  duplicate_checker.py  embed_and_upsert.py  insert_vectordb.py  sqlite_ingestor.py  utils.py
prompts/: system_prompt_v3.md
scripts/: download_model.py  run_extract_distributed.py  test_db.py  test_llm_api.py
tests/: test_web_browser.py
vector_db/: resource_manager.py  vector_store.py
visualize/: events_app.py
workflow/: chunk_financial_documents.py  download_models.py  run_extract.py  run_index_events.py  run_ingest_raw.py  run_interpret.py  run_kb_chunking.py  run_kb_indexing.py  upsert_to_qdrant.py  util_check_duplicates.py  util_verify_integrity.py
(+23 files in other folders)
