[project]
name = "tilda-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.4",
    "hydra-core>=1.3.2",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "langfuse>=3.12.1",
    "pandas>=2.3.3",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.1",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.26.7",
    "pymupdf4llm>=0.2.9",
    "pymysql>=1.1.2",
    "pyrefly>=0.51.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.53.1",
    "tqdm>=4.67.1",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
