[project]
name = "pro-nlp-finalproject-nlp-15"
version = "0.1.0"
description = "Interactive Arena: Financial News Analysis with Local 7.8B & Master 70B"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # --- Core AI & Model Inference ---
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.42.0", 
    "sentencepiece",
    "protobuf",

    # --- Asynchronous Communication ---
    "aiohttp>=3.9.0",       
    "openai>=1.10.0",      

    # --- Configuration & Environment ---
    "hydra-core>=1.3.2",    
    "omegaconf>=2.3.0",
    "python-dotenv>=1.0.0", 

    # --- Data Processing & Analysis ---
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "jsonlines",
    "pymysql>=1.1.0",
    "python-dateutil>=2.8.0",
    "trafilatura>=2.0.0",           

    # --- Web Service (Optional) ---
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",         
    "black",                
]